traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:11: error: not found: value i
    setPos(i,j);
           ^TraversalZigZag:11: error: not found: value j
    setPos(i,j);
             ^